fix plex deployment

--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:QQbxHCAEWkJl+xj2vzd+2wU3eJ1PX5oCd2FxZUebCfxjJ4os+jUYRDCEkp2WswjBFlkt5SHT/iIQ01MsX7vkHQo=,iv:h20PBrCjqfud+0N9zDRUEhXFMqH14ViXUy9o2WOGCBY=,tag:MaX1GaBYJXEb+C7WfttMcA==,type:comment]
-    #ENC[AES256_GCM,data:xu6dWWcoHsA3Y2TjSCcN9Cvdg8i0ZLUOh3POabl7QEiJA2a7zmQk6od9l9U=,iv:9hgkba8lvKVugKNl5rRLZGSgm+kOCN+nu37NzuYzJkY=,tag:E1EBQfgVf/QBvbHuxGdvrA==,type:comment]
-    VIP: ENC[AES256_GCM,data:i5vfdW0y6p42esJoiA==,iv:cQsNPmk2mMFRMHTqa8UPQvez4pBSpBAHCVkYFb2KRPE=,tag:eXl84jwpAjzZpJKB43SpWA==,type:str]
-    #ENC[AES256_GCM,data:fiGUhBleEHNUxjy3a+MBgEdfAmKU+6Rc+U5e,iv:839KUGOTTsil3MHdwsxHCT5SUieNA2mkNi6d8HTAdKk=,tag:5Ewr9CuB026ULAQwgWh9xw==,type:comment]
-    #ENC[AES256_GCM,data:SeSXCA7xk0Qt591GGhl0tolNCRSthnRRTfKq0nyh4uE/vw4KBTrsLyEcJRocnFmucw0VS4xs/B97LJxZOMKyFc5h5vuVI8Oj8sSja8ubELC3UHDfoLkhU+Y=,iv:VobHBVZC4Q1cycu/NP8rHq8zq4RRvT+2RsWW0wL74tA=,tag:cTpwwi3vEWkNTrPxtIj12g==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:70s8DPMsIQsmtdJR/yM=,iv:/mW/cldIunLfLY6SHIpVXkXClIIrq918ZvSe2DwWQU0=,tag:efDTX4NkaXJiKwLhM7A+7w==,type:str]
-    #ENC[AES256_GCM,data:w5MfgstvaAilI6q7FO9lOoDT7WM51uPhxQCP6yAf5u6WPA==,iv:ZC+jB/WPnGCTGocapm/YtAVsnJffrjWwjbLy2hBUfzY=,tag:r6Z7cTN2M3O2I4Hysg9ePA==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:VA23wgS7WrBwaojOOA==,iv:JikXkMdRNo8HtzopZuCSZg2Ia+QKYS3lvEjQiwWt4q0=,tag:iBuMcFZs3ztRS0oySjMrIA==,type:str]
-    #ENC[AES256_GCM,data:3RViCjMiGxVTm6iR2ADi7BXkLgovB1a1BwwFyraEony5ZQ+qd9mRozpx8Bsok/Y=,iv:Qt5+3G32BpDXGcLPRJE56p/fSmeZbP5pqi0JrC2L/u8=,tag:jDzCVdVO2y1a7X7MQH4ckg==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:svgMKs7/qnLqVhxjrb3gM5+tZUeS2Fj0dy1s7AiFEQ==,iv:GK3VVrNuR7yzm9VvgSN9LzIsR2Ka0lDBs/L+MRpQWFU=,tag:XVYuymwPUudjKVdaeVarww==,type:str]
-    #ENC[AES256_GCM,data:i3Tz0RY5ucTt13cg4obR0YXGdGlaAqr9M0vgOEkmQp/2viPe5TKWRntLg6P51x0YfZtJ5j14HlxjwJ+DFomMp5gGW+Vb2fyHJgJ/V+cBwCralw==,iv:XSP6aAUK36UNLD8lG6xex01OytSgQG6cYAWH4SFNlfc=,tag:KFrMpYUNHofy8N+Z+Gh+dw==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:naDUaXJRPkuDAeWwP2PB,iv:x0FasIsK9A7gJmGq1oQV7/sCopbtIrgBy6TbSebgT3s=,tag:PxVuZffDbC1/RNJ/oYG5iA==,type:str]
-    #ENC[AES256_GCM,data:klIVMBx19+L1i/M1A6aNe8YjRjpRTZCFkUdbsHfrbzvP,iv:5KQ5YV3sZp+uDdkJ2e55yeKD7GoKnXdvBqDA030+J6I=,tag:tkr1DuUBTD1XAdsqJIJ5Cw==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:VotJ3SAkydzBkjlHizeA,iv:KQdEgFvBBw/VUpBAmnA/eyXL0m9902aD1mMYuUcVRmk=,tag:Apc4SToTA6wc4dG3TPeEpg==,type:str]
-    #ENC[AES256_GCM,data:I/n2+o8AYnVSNFM2SAKAqx+gx2xfIPyRI2dV7ie7tnYnRH9FRQvGfScYnyIJrI9N4DrOtggV+VT4BEZSNTeNVz8GFpUAHsDCRkeqUF8cZVA=,iv:b2HkS/txPtE9omIT/hc+JoteTHqW7u/SwbHXPNGuV30=,tag:NTUSQFRx00afXb8YaWrLAw==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:jatJKCV/AUnZ1FNxrhmd,iv:Gq3OfsCaFr/N9hWj6tRdltZhoDJ5Boa7HJLwOgyz5KE=,tag:RscKWGg/jgIv3E17S3xjAg==,type:str]
-    #ENC[AES256_GCM,data:ezPGQc8zlkNnnU3DiEjhC4HS3RCK+D5jg/ggIRCz2uio/csK6NDY/3mK1tUQmcZPfga93Ds0H+yqAXiPgbFceKNMI+ehpb6IZ5y/01Rn/4YPUo2kmlNh,iv:cm5V+NT29V7Wgv03o0hCY10t0doIdyigOUbNZJh7jY8=,tag:jp65Yyui3nr/zVYYq9J0LA==,type:comment]
-    #ENC[AES256_GCM,data:qej8FRH8F3AS6084bc1vl0S4lKro1ujVnOxQUOnPrgBJQ54ZNRt15QPIvK7lG/ivigwNmvZdDdCUawCxGXkr3siZ9gX67nJFyqK+wxCIBHXj8yb/4Zztm7I6/kog5NBaFJEnMeHOpbazNyj8B/LN88oHun08ZAokfk2D1w==,iv:fAl12wKWqZsHypYpN5TH4s2M+QgFTVWPM8WEyAnZl2Y=,tag:OzmOOLxnQzA1JW23Aw3Svg==,type:comment]
-    #ENC[AES256_GCM,data:O47M2r49uWQolPFA5gku8QsCnP4gTnOGUhTx8Q0TMZv5bsd/0jpHpWd4eZZS0UoiR60ZWHssl3k42BXSSx+5eUhOc66Iw5kcIp4lhX6CQXA=,iv:91qlAwRoovNNI1ZUFeNMl46j6rcOFbpU6ev00gSaK7Y=,tag:XkpVmFT49Frl8dZKtY3K4Q==,type:comment]
-    #ENC[AES256_GCM,data:f1buac0wpkKugVDeQKYYEk7gO3+eAAZGLXjaJxp3B2dK+v8ITrn7cvXwEJJtQiWR4WYeY+as,iv:dV4quiP2pPQTvRhYr1OTid5/uaSbaFDIggpY/MjueuY=,tag:3+9d49urSgDNidX/eH4mfw==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:uqKuCsE3oYesjAQU,iv:V/q3X71kN+T/7n5G2JnPhU/NGBYDTDkDcvvbpV3I1T8=,tag:2h3RihbjuOkHSryZPzCopw==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:ccWjhlxGPm3WgZ2eteCVIHw=,iv:kxqJUDnS+w1X0IOPQnTqD5M2+zO7vhh5oJ7QCk0sAFU=,tag:IHISkHio3YkNU2e0r+25Mg==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:CqDAAbmbcLgMO5KS+/HxYfjGoado4rqU8sySCdKLHs8=,iv:NzCNZIpYwJ3jdwTucRx/DJR72oqEYsFbx8L3UVazit4=,tag:3lMcsyDL2/6zNQ5ltSljOQ==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:KfemOZkoOq9tR8NklSD8D/bna3jAE/clcDyU2TmhBcOiUzgKy6CgAw==,iv:fUJXQOYRnGfC0NaRafkJyrKh25GqE3PlQL7eIxJhTAs=,tag:0NA79LA6wyFWK8eavFGeNQ==,type:str]
-    #ENC[AES256_GCM,data:5xorkXY9XBs1UKYZZsrzqH+tBI81oubE7kAV+WolwdXXwV+qu2yUEYmbMQkg3EAxd0a2nzkexLKomh7z9jEZSQ==,iv:OLr5siLNq/V2lkmmKldf6DhI1afx28mbaJSzwH+yofU=,tag:lZCRwYtYQYDWWfy248WqQQ==,type:comment]
-    #ENC[AES256_GCM,data:1U60ilyJ1GCWedQIhmZjaDHmQUC5ijJwMuc9ivp8M4aAg+FvkuwuAAkfoQ1NHsZy2Tih+W/we9w=,iv:dwUNuGykukBNlxw8HViGOfHCCc7QNixUHyTxoU6qdp4=,tag:Ssai1SgyVYO2XZx8gGig7A==,type:comment]
-    #ENC[AES256_GCM,data:NozoJXE4awrTVF+aQgHAg1ZMCOSfhpoHMA==,iv:0COiXrJeji8DdlEWTGWqq8ssvTc/d9sYZ14j0rwCBFo=,tag:PSvbBSBKjV/JpWy5GVmU/w==,type:comment]
-    #ENC[AES256_GCM,data:5DKy+yHTi9uYyNc9dTeAISK5gAO1RLrl0pAAUudim4AT0XePFyukvmel+RdzLvxC1SxIbVYVLovPxVKjiThsde+y8me7RDtIlNHtB4Y=,iv:DH3qj8swpPDaojrqTwYSckOELkfRI16p4P0C0F9y1FA=,tag:qT2wMFTo8MxZ2CAPRHAenw==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:RfFxWgTDaRtPfzf8gbuIHfyvWcLU8Gv8BhuHpEiqt0zmX9tJZZ+fhG/x1KF7lqPA,iv:fkjgoZFMJEnsUF5DH9CCQ+6Xqnd+oTrklHeD+7m6O78=,tag:q0fZ9XEVCcIf10K3YsWTjA==,type:str]
-    #ENC[AES256_GCM,data:SOvmUwm4mvAmpE+lnvCrGQb+9BwRGpWKCU18xtiM/11ZLr12cLomL9kfWjM1lJclaB2xP1q7rsGpmOZcfwmwSMA2Aq0Il1s=,iv:eG09uy36+ivScQb2ckWOYTNXJfDY+ytp9X69+3J2XAo=,tag:ZGIf9BAS3V9ov/EiestVNg==,type:comment]
-    #ENC[AES256_GCM,data:j3gDtqbVAA4wYX7CW2SVbXP+TwJANnhe7q3nS7ZHNuyh4jzMStMBls2uPlw+qxSkOOi7eWfE,iv:NY0QPRF2XASlHkHsFUvhbvhPUfk64YBrs/fpycyUIPg=,tag:DAPcn9yRjlzm4H7UjgB/8A==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:yJeqeW5Rlg==,iv:0zh3CXic2HyaJup5lyTl3kTGcepPxvJbCKv6BIroHn8=,tag:mS6kRKEpyGdfo6DnMgMRNQ==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:trgI14qZDIHEtRZfS6l3tQkdVWI=,iv:xkGRD+oQm7dBRJuVZ5jc9Eb84SIszZ+UtriO5+7oBXc=,tag:9hgmhG4bcEaz3wghiFsfaQ==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:W+CV8S6tTc4mkjo=,iv:A6C51UImiYsNEHX7nvv1eVEDetX10/ei2tq3XYsQQ6k=,tag:xwKioNGPBP17D5551Y6/jw==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:9GKUFG5gkTVIINv3ucTo,iv:YZC59pDYxDPNr/uonJK43xBtQPiCKlyvko1zuhSUtFk=,tag:a+D0BVqy2HJ0txWvVxOm2A==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:TtC2w6jCT4UaMu0hayrLp8yinhVCDJl6RA==,iv:tVxltMHgw0+o4qoxHlToFg+U5ukCF6lp2TTWMajDphk=,tag:Eir69oUzAVSnv3Q6qdwMIA==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:JMdJEwFniwXtr4Q8ED4+ea3J2vAe3qVsBmax7m/ubg==,iv:omWZyKK9ruSZcNoi/vpuv4x4j9krY4jYfu4Ap2G8nVQ=,tag:09h7vn4UF4AC3c/KCXIAPQ==,type:str]
-    #ENC[AES256_GCM,data:kSwvgTn7YVLCnFpYCm/nks/+01SvmgfmBbxO/ux1wJH4qeJ6Enk=,iv:Z3u8bfQlxvgiH+aW8SYvPn8KuSl3j0Gwnp6iau5ckaQ=,tag:N0U7MLpEcA/gve+dqZULQA==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:7QDZZDGn9ZOoE5SQ5nGbRtxMHmo=,iv:a/0fuyfza0asMYUIYeqAm8UlRA0nFxsd/itnIJ4NSOY=,tag:R/H9pTvWCch8ulWN7yx/3Q==,type:str]
-    #ENC[AES256_GCM,data:/vdrw7GUHIfDNkN9yUo=,iv:6gJdnEpscgtC0yKNAZslqoP45SWR1+tn13Dz01nA2oA=,tag:2NIdO+Pg5VblDp6JB5QXiw==,type:comment]
-    PODNET: ENC[AES256_GCM,data:nZf0Gp9HvRQ77mbLuQ==,iv:vTn8LDP0bEydaBDsR7SbIcZnJqULlic+SQslYWdCKE4=,tag:vnrPrwytn3voVBBH0SVAYw==,type:str]
-    SVCNET: ENC[AES256_GCM,data:fd3SN4skOGQsajI6Qw==,iv:Q4PkxyKzcD1sDrZnScccTjhazBp+EgSWrDhBTPOubZ4=,tag:5DnMSQEHmXlF5kXSXPqz9Q==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:98cvGQ==,iv:x7fVzsaZicWwNZRuVkLAK6jHxpb+XQgHqukL5VlZKgo=,tag:1geulIPKhYhv3+qQeqA79A==,type:str]
+    #ENC[AES256_GCM,data:z4ZgyYYTal6m+sivdbHWVCX1YlXhTsg7uiZHDCTv0W9DWknIqO0NkfKx6cC21eQWi6haS1QYsuwNCVzy+UIL5CQ=,iv:+zCFwxlBUzJtwDxxC92d3YNTW+BKPA2eVcBQM89y8Fc=,tag:K8gH0MMIx2k2d8vijrjvsQ==,type:comment]
+    #ENC[AES256_GCM,data:S7+J7uKyGIjO9WnOqFK0zQxusOtrgo+GCOEXmONMB/vbJtQcfq6CEjQ/5T0=,iv:HD5dzduRw7fjJ+z93+oQ3O6/6faIFM7L84ILaRrXcDY=,tag:584bSPrtsT/DZi8hswhq1w==,type:comment]
+    VIP: ENC[AES256_GCM,data:sBx309G5EyffWPLiDA==,iv:qf4ZHKsnbp4JWCZMGdmZHAzjoEwx8l/eQRBGzUahCf0=,tag:RbX5tqyaRElT+Onpe6/Yhw==,type:str]
+    #ENC[AES256_GCM,data:C4iAvHd712Kskcx2CFXjXJkWIe4LgT4rte5v,iv:uY2bdrSUzLgH9SiAu5mPrhis9vzGiYp8iS1lILvjTVA=,tag:xpx0OEeUxqT2n+aEg4VczQ==,type:comment]
+    #ENC[AES256_GCM,data:UpKExriv7bA4IOm3VDDEkwh+2wume8nYlojPW+Ar4i57ZEwCgJyy1CI6ASxokl32HNP5JFdl2V0EjV6YiH7CRU8LSa8j4giVHevQDz7M2uzP4nbDGmNyWSE=,iv:iHg1w2a9fyJblVxSgVKKigGcVXLxSnTs+QHssgF5fho=,tag:BJFmqnnSQ+QOtAQX2Zn9Dw==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:fTPm74FR8K07ifqr2UA=,iv:6kRqPJkEXLvHez5A7r/gjFaJi8cJpkCbfEiGZSXqrr8=,tag:aLkZWb4KIQZ3OOBVadFJ2g==,type:str]
+    #ENC[AES256_GCM,data:CXX3kl6GIPgLvGSCoPCROl7B3MTbsRzBFq+/Sezb1ybjzA==,iv:t2SsHVIWmSeV9atHpMIwnQVJbwNvxpzKAcIKnTl1O/E=,tag:M7YJ+hjTwUqqQQ5e+vWmEw==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:Z5t33qiJkmiTKGh0+Q==,iv:5dh3i96aLEy5tx0njZtCFflU8n3sQD4oFDDStAMq1f4=,tag:BJw8nqDxYp5rUnHmloXwnw==,type:str]
+    #ENC[AES256_GCM,data:G4VLGdhvoG4bdlrXerftjQHhLDxfmGCL6EQvnXTPNDaGQ8osUcH3JB/7/xOsgrc=,iv:ilDpfp/hc0m8WOOXUR76HPu6NiXniPtA5LXb1tGHRCU=,tag:bIUATmt2F/ZJKf0VZKxIxw==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:nNI71UJ0U8Oj247TLKvCBdrbjwvN5SwUDNR7h1Li8w==,iv:35wmMDcfSN1t3x47jeOY3LFb3IRPjm/y2EgVnOTCgL0=,tag:BDWCrto/er3hJxfbws3gTA==,type:str]
+    #ENC[AES256_GCM,data:X9YykqgsLCiAEmL1ee6I0y/vkm/RLTZqDUxLAbwRQ/rGe5Onwfob7b9hQpCJAmtRhnQf3T5t1/ttghMGTiwkWCTiqE1nxnpSMCTDJtRVbQkhvg==,iv:JqkLuIeIFt3fkO/2K1W/+GvF4LkqIlQuXhD6o+2PDH8=,tag:GjzoV6V6LBmdiKyVOMAMZg==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:3/zvkcjUIeSxk79lipiv,iv:U0TF4wDmUEoTEv3aSeqKWlA/2HwZgXV+T7YTcP/u9wk=,tag:UJvZY0NI3EcngeBV/f6nQg==,type:str]
+    #ENC[AES256_GCM,data:aWBl6YGfQLfcKpZjX/qg1rluLc+Ir9npt1gmNhNxhE0w,iv:zkOKqAoOlcRhKwgshaNO8eLPB3ZXpLi266ENyi5DZO0=,tag:6T3E4uNn01WPRhu2pfVurw==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:IoYvPmWq3s79IZtU9nUN,iv:t4+ZK+H1NDoF2lfdYIgVkQdKp3tic/xDU3459GFkQDg=,tag:EH1cuNevW4s3QFJproHEzA==,type:str]
+    #ENC[AES256_GCM,data:wmDO+TT3fJ6TnxHjou6eHwJXi6RqsNGFbElHRNzTgeTFZOSEzH0MOTqy9iP1OX4C5tzViKCuiQlH5lhmpQWOB61VIJkG63/Y7vAE0t6k3Dw=,iv:bGTzKqtw2vtFC75JZsYYFEjklLtBpSzntmckdRvTCnA=,tag:MbVbz5bjk0EQVV22o041Iw==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:i5SCWxFFGLI5neWblir6,iv:KRyba5AVm9i0jGX5v69WX0VmqABS/LUzUuoR/SDK76o=,tag:pSxREJEs48yDBsGQScE1hw==,type:str]
+    #ENC[AES256_GCM,data:VAOFX1emp4v6u88tckptcRXBvdITgoH6wTdN+5mCesLudrvngN/mQPlPp9tJdAJ5CocTrmS56ph+YBqHLAy9k94fxsSY+Q5na9WNSYqF/pfdKuyojCEh,iv:esie/QYktHgPuo/aLD43oideb2P9avq4+jTwr1SI3lQ=,tag:LGERIxa+yDyRj/pcGu1t1g==,type:comment]
+    #ENC[AES256_GCM,data:lCYP/grWuHfwlVXSK3EnY4lfoJ7qaTBv5w7kZt/T6i8BF9ri3MRhUkyaCcHOYJ9YlC6nhNOuiErucHIf5SjqrrffhhPXqZfhkQa6Pk9b4/nDDGYhnZP9+ZO2uA5lst77ov8VgXV7gEvpXrsHebH6wI+japNeMhdFjOZvgw==,iv:fX4rbMNbJpnn7dtk4e4+disnAWphqjAuSKRejmjRfAU=,tag:BgTzH5ZfvEPVxp1BW4bNYQ==,type:comment]
+    #ENC[AES256_GCM,data:6fC74GOLYOb2f2l9zPydYZkJ8BKrbH+tdAOT6/sYc/knRWjUO8jIiiwEg2IHdsXvjgwnjW0yGPugf7S3A+M81UvT8PwbTQ8E+Tf4WKpzXC4=,iv:yuvOJDWujp8eW0Ph70fKwx8VWRXmiedpPu4+rq096lg=,tag:32AJDh/Uffcf9II822++9A==,type:comment]
+    #ENC[AES256_GCM,data:wBhYsPa5zyl5Tx+TvzDLKIWA1XDZ0qmpu8BG+govFzxYqjrbL09s8sNJkOjTWtCSg9sA0bsi,iv:IloCyZwDCayNXNix0EmZDQIiPoVaXTQlsMORovVJ4eg=,tag:agZm+Xn3KYAxx3MZqryGbQ==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:IV10gZkJQLkSZbxw,iv:BaM1zIRbODMySyYpqtw6CIIXkYPzCJvsGD9NcsQzqI4=,tag:YPXkti0czce87BQRc+D6ew==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:OXxIlv8DfuSIIJ68y96B43A=,iv:1GM4VXinR8e9u6p0xV4uGuWglo293Tg7hO2uZyx2eDg=,tag:eDnqdaLrTxVInG6MGHtUxQ==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:7jMz4sJJeWOHcuAQY/tT5MbFQCt0rVG7NR/II75ltEM=,iv:OQbHFJdDnle641DgQmH1Yt1zocQotEBSZ0/EIEECN1A=,tag:sdassr+RL0mPlzMd6jIfgw==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:AJh+L+wIMXUnKPOB7Lk1/eRXNcVhIImKjQtewdWWH6pHp7X91qU5ww==,iv:+OA7CA3ny0MoNqZ7razegCDRWkDUZHB8T6j/LJ+19Vw=,tag:+r24jXkrwDBmiWa9ZvlWlQ==,type:str]
+    #ENC[AES256_GCM,data:lEWi9YSBiIgWDDCCSmT4T6nEmf4W++JHxm9tpcMAmPS8cHducO5sWz8eW8yJMhWFFu90jiO3gV/5REN/+8u5JA==,iv:iK6VDKVxBrzYr9pS3Er5MICmlUM3QEy+MtHFbux8vq8=,tag:3+x/xxSn6nuZRzZiIoeq4Q==,type:comment]
+    #ENC[AES256_GCM,data:AuizrJNiD8PGsgMI0CfuDfrjwFZIMFaiW32TtjAye+OiE+ICYjAADwpULtj5fUhMGw2CMmaR2OE=,iv:mQWKKu0oQByvK1vZxKvrK6pyU5tBea4767FZ+JiJQK4=,tag:lxILg8DOeAB4e7/dLijG+w==,type:comment]
+    #ENC[AES256_GCM,data:R0sr0Qu+W37rXYBXHhp5XaoZeQNlzJkXzw==,iv:EaB6b965Ti7lxTO3WLwOUWz0Ud0aQEhDpbJa572ZDSE=,tag:/afRv2qDBZmNtLEHDkmVgw==,type:comment]
+    #ENC[AES256_GCM,data:u5pOMZpr5UK2wU6PwBBFYPPKLNPFmt09UVq2gYOvJftva/8e5HDS9T1aIErk23QjqJWr4kM5qYebI6oOvKSjM5V9Y0YOBjlpaeotJkc=,iv:Wv0EsoolwbwWLMaVd+t7SfbLb7AGxG22Xi3X1POANCQ=,tag:osYUhIlgK0kf4otwHzcPJw==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:BheM/Da7CS0UVG3d8uWluEbKyNDbD/5VhJ9iMdOlO0KR8S91iAYc6VgwwWU1UdP9,iv:ZED7Na3wG041BgU4W8qtPowS71Glfl7hggOo2mCyESE=,tag:OEME53mbwBrpIkGjpGYpFA==,type:str]
+    #ENC[AES256_GCM,data:ixr851Mgbbs/bOtXZ3Zb/AijpDbQaiIN8TqR29m3m+8wShDqNbDQOuUs8p/vZ7fFm8gclWU9Bqh5DfBu8BgbxbpVxkn1cL8=,iv:X6ZFtiNlqQvmMDVZjJVmi9lehU5hdIGTVVG01UqmWo8=,tag:Pzkc99FvfW2uK63ZsZYA5w==,type:comment]
+    #ENC[AES256_GCM,data:TopyFij5AgrANl21ZiKLPuHuDI1xKgEg68f9BACpGNiq5cCkQO+GWgPSFx9De07Ji6gr1YvH,iv:+GnSSVr23ROYTi6H9o82TEd8urREUB8HQqvcJX7UoP4=,tag:Qek380V9IkAflBBtFfk4Qg==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:DvzaTsE8ZA==,iv:Aw6l+m51PIYKPEKbZXhtZBRTP6eMcxlyAI0YqNQt5TI=,tag:JuaUNb/09UVKkzaRCI2SjQ==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:sJo72xec1gow9b0Pyo7Oq7ZNGh0=,iv:PbmwWIPc0okJq8FsrTYNfRsBRczMXrrxjItGGzdUrD0=,tag:eJt0y2JLu6JkUNquL1IKQg==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:9wKqF2kVq/9Mq8M=,iv:NOlE18KWitNvv4xrbVv3EzlcaIG33cuhnMtQ5sgcYr4=,tag:7AIiFoYQqyIye24lRXb/pw==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:x4udicGCf9EzpQ66/87O,iv:Cq4Dp6WMQ7cz1D6yLKn33x/f8DLP+NAQVl6TYnpo5JI=,tag:iVjZDbwV98LqS1dBMGN5vQ==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:ei+fn/g/vQm3H8ANmdwcz8VkwOT8fdsMJw==,iv:3AyAQNX4kfrluOfod5RnTrs2CCBuK0CBISibP7voesk=,tag:kCPqhgkqvBAGjym1KRDhPg==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:kBve10Bd0A69kFbdQ4/cz5eJpEpr0tjRzyy5WDXZ2g==,iv:N1nJKVIW8u0U2hcmRQ9ti821OQy+kNq8ofWKflLeHK8=,tag:pRbYZYuBW9o2VoN8RnHxAA==,type:str]
+    #ENC[AES256_GCM,data:DG9/r9H/UPRfMt0k7zh6oq7iwEuoMbC/VXHbpOzeUUgOSyvxFNU=,iv:NjlTYxvZwCKmXJnNwtl2ODO465uCKjfZqw73RA26uLo=,tag:PVJ3u1GHQBNeRLDV+V0qRA==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:92ln3UMT6bgyKfPVOeOhU0zZ4tc=,iv:oBdmckRWWD3jvKPTkdfZF3CLKTJpTURpU9AvvN6XXiU=,tag:twYFBY+FczpN7IeRTNeJ2w==,type:str]
+    #ENC[AES256_GCM,data:RQ1IHOGjtIxOfzFiE7c=,iv:ynlGZ8IaUZH7i89BYbvXCulQiEeG27acT1RHnSkrrb0=,tag:WkCSYffvR4R0gAzQMqEtuw==,type:comment]
+    PODNET: ENC[AES256_GCM,data:qmfQ5pS3jhZS85Y2bA==,iv:znd926RxkNMQZQGoa5rezNrTADgz315ipu6JUpfiNEo=,tag:21qaxXIjjJ3wEy69dhmJKQ==,type:str]
+    SVCNET: ENC[AES256_GCM,data:FiDH6b6bV7Cgl2UteA==,iv:E7CAYKsgJEV5YUydssuU+Z170g+WNMyenIt0xrXTMnw=,tag:B2NQ+DTH65NwyhSW73GCew==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:FJJONQ==,iv:upHMI0WcQMQ4yNMGEQMh7c4U2tkoyTG8yuhgbmtrUNE=,tag:2KIImHiTY1mOcoVfeBgMjQ==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBaaFVhcnpqMmcvNGdNNFFV
-            SDI4Nzd4eVlNTlpuOFpIRDYxMGUyaTBSRVJVCnFpcmJIR0tSeGt0WmFpQk00N0tj
-            Wm4ycExuNGNOa09mQ0NQZmcxVFpGWVEKLS0tIHZSOWFOM3FibEZHL2FJVHJWVllC
-            clQwbkRWUlpBc3M5M0lTWndlaG5iU2cKmi03pWzgRCIKWXtslXU2X9BPU4x5i7co
-            iG7WJQwcKaXWNkW6ELsCO7szaol0y96qO++utKI5kGakmLN/fxe1oA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBJQXZLcTdpa2hPNjFOamt4
+            OG9HN3RDTUpzWkdNNEFWMWNUVldTeEI2Vmg0CnJUMkQxeHo1ZC9jUEhLckxUYnU5
+            QWpZcW1CL0pCa3luM3RLNGtrdGxnYzgKLS0tIE1PNkxZOVVmcEVDQTl2Yys5Vzkx
+            K2p3aklDa0lUWmYrclcrSlVXcWdDNjAKRxIBplXj6d2BQkqhdqIWmut5F+j5dXmQ
+            2pwyALxw2W3WnNn0fnRoK3n8PdYCrd8c+6xix17yCtVraQ1bgy6nQA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-11T22:33:25Z"
-    mac: ENC[AES256_GCM,data:9psZlC9mndNXP06/7g/kAa+sb5hNCa+1WBRKdJpINlT+BCiI9JgGIR3oH1euX8VT7DzNTl3GzBavVzjPYyfLTsPbvszbPbHtVLQeegQtwJ4W7aREQYeGBmzMZ0Uwa7PzvLqrSdErZn20xGHa6uswhsP/WHY1MuOB2TZwL8AX8LU=,iv:E+BFXAs3pBEnghbUHGcH3EkE2DCDUcQ8KOtszqjm5EY=,tag:blA9EZn6eQrx0ptgbE23HA==,type:str]
+    lastmodified: "2025-01-12T18:27:45Z"
+    mac: ENC[AES256_GCM,data:v9naXC0rdLMnXBplcmn02qc3pNSnY2IVOp0HzzhcYT4flSc0OpJfHfmNG2lNrK3nNU3U+fsHMTli6RBUyzJ3e+iS7OJplkeVvSKnvCaCgQ37+UM5+kmWL2Lu9t+bwzhFiPKAd7qTikCa89LGzGJaeiY8pbxvFNANMKcoAlM/cyQ=,iv:DG17FOa3V2LwCq80q3wsGwBnz/SSTDINjvCluyS0bnQ=,tag:YM92XZUtFz0KvAz5jmZXjw==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.2
