--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,45 +1,45 @@
-#ENC[AES256_GCM,data:vfkJi6EgqowlTAr9sFvvqd0XLuEVvgEZ9TAK7zm74DIys3ORiU/18F9WdqSeTiTp8lx1MPVArf/wVGp6AqtoErY=,iv:lM0M5Wwu5wJSPqmBrGHYjaGIRjHoFQnyr1o9am90vYY=,tag:gS/5jDVzqzhEgRMuSxZGmw==,type:comment]
-#ENC[AES256_GCM,data:DFns+9c7ZE8lRHAQcCdxNb+7PqBo6pk9bIz8LHjgmTDNEcB7PLNlQqdhk8Q=,iv:yma1yGtj4UkOFw8XH8IMNfcee1zmlfOAcI4OE00RyyE=,tag:1Qpw9nV+KtenhrPV6vNetQ==,type:comment]
-VIP: ENC[AES256_GCM,data:VLwMI514PguU6Ynlfg==,iv:Izzb/Lhyl/9xV8HL+K5UiUNBCid4+3JI2zhS5izQfAU=,tag:/vXW+K0g9z7IYZoChAY6Ew==,type:str]
-#ENC[AES256_GCM,data:PNdR3f+jslC2lqsLX+nOlGYHgXoJyXC8q7OE,iv:TMCsizhNhT1ISsJS6K6WxtaiyAdGuzzxQTicj+m+iQ8=,tag:rBNhfc4tOPjtPjBy+mJinQ==,type:comment]
-#ENC[AES256_GCM,data:OAIwX0CSQdEdJkGMn0IeJKk09SsDFBAdYBzYl/NKAGVeMzlFo09BlrKAJDK2Vqt3uiK4ql2mpCSg8P3IxxhbDTc+dkSfTKfA9XzQWeFt24WBlE5qAoaK7S0=,iv:Ml+8n+wdVNvHa98PV5RJpNFXvx8XnbPMvYNQFiarxpo=,tag:0DvXWeLHWdJMrarnhxYmcw==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:3TajKHEW1oaMM81YDkc=,iv:yf0oQDDOjvxsYPu+rzeuIOdXXvQogQw7oUryxF0PEsA=,tag:HgNQi/+HlEAQ9u6Xboz+zA==,type:str]
-#ENC[AES256_GCM,data:5UMflKnG+/F3qV+d6OFDYgc3rY2cFEJwNVWg3Oeh9/mMUw==,iv:ghAWax4IBOmMbd2h/oh8J/eNM5XUao/4n2R/RVMs3Ec=,tag:vY7L3VAqbZtZnnnYh7GulQ==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:ORWFm4Yczvd9lreoFg==,iv:gxgUVsCcnEJPx308LFBkkrdeJupYRlO/VSFLJcP6vxg=,tag:KO2bV/voW6bJomRVUzqRWg==,type:str]
-#ENC[AES256_GCM,data:gpyH/6cbh0UEhQW6P9rnAozXhiIIH/wCijkS4Sq3szUYU1s5dSKqAS07zZfVUfY=,iv:el2QNwmhON6y5t0ppe/1bF5KpRwHFO0gEaf+yoIAQiQ=,tag:1NBTauPqWBJzKhcN3iXjwg==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:O1bU3c7N6nfJ2B+V0gtSqKwh3asd+KZ38K19dLokxw==,iv:j52WnTyZZVX/uEjbnFw/2Mknp93qHvV2p5FQYX1gFgw=,tag:JYjul/qlbXDED8xLlT4m3g==,type:str]
-#ENC[AES256_GCM,data:nKuG675AhV/6uaQ++yAKTrb8DdJQchYaA9bUCSZufgPfJZnC65SNMzZILeQ1/jArx3zmnxBNOVFObPr4VsmkGEMXIm8uofHBgzIIHRZ8AfKUMA==,iv:Ca2g7GTzilWyJPP7X2f4BA7ZDL4YWTpXRqzipz+cbvk=,tag:Ndj1eXqTPtXN+P8ulwwBxg==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:PlnO/o4cfe6qrf9krnlR,iv:qYTUhFA8+a/avMNmJzLzcGZdEznOYMTGYi+eFFD1qVE=,tag:gVkAWxC1mnt/Qte9myPKow==,type:str]
-#ENC[AES256_GCM,data:FrQGLAqk7vzZJvS6LEqrf9JJRsdotY5Qfxq1mQ97wHIn,iv:M6LOnP3xQsG4T0OtV1Hu4c7XRA4aT5xrgywC/HEN1jk=,tag:5WTgJWL9p4SL7af3i7qeuA==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:ReSR0crpCsSh34M4IT4b,iv:VJpiJ9svByR10XMBx7Od6XIcTJWp37o67SRHA3nn/6Q=,tag:hsRb7N0H3SAOzpTb0aHFVg==,type:str]
-#ENC[AES256_GCM,data:vKzygjOJaVT+mxZQ3dKAFG2qK0H2WOh+ZSzS/7ihu1cG7OYWsavhAsdNgEpM1jMjpf7kA3U9LuQfqii/zmvJuYXncdeUmSn17nXEt9JkPeA=,iv:7TA4OlqVheJNIAXi/4SeCwvFRaL0S3kBYj9uCURi6Jw=,tag:gpvsUGtJpzcOq5tTt6e23Q==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:26JEMSVdL5K8P9pCwA9R,iv:0GR96NB7Ofi67JsY5mV/+KnL4R6jkb9QyNatX4aTB0Y=,tag:fUbQWe8rtprIDVVmcEur4Q==,type:str]
-#ENC[AES256_GCM,data:+KJgi5poPC5tOQpGCcnptRWBbDGHuKK5FyYpZlRZEu7AvhWWEaHjNiNbBx/e4XQpU7Isggbd0/z/PjAs4bakmb2E3OQdeAJtpfNc7yfDjGbgmRp8N914,iv:LeULvm3NjCZWBm/dB1F47QXy3UrHp2l8/enWU7SSK7I=,tag:HvqSf2WlwyijhF1p17ctmA==,type:comment]
-#ENC[AES256_GCM,data:hw1GEOxkZXI+zrK6RHeoI2PY/ydqbc5rXj/fXHwWaYU5dZQISUy/HS3Loi+uteXLE8YaHK++rWXUPFcoUk1+UTdt4+lbudDPYVsXlljipNqLY0SZdFvN0uJ63uW0IeBIQkXd+RxUyyOYpCMTCv2VMH4ybJFF+k64xdQOHQ==,iv:uL/XBSCgfRuxoWzOnWADsytNYSs7TnZBZlvDyhzkiTk=,tag:hngauRUxb513XcSWY9pFpQ==,type:comment]
-#ENC[AES256_GCM,data:kJVznSa//616oxdvnYdnpt8REslcvC3aXdTvjHAym/bZzD20fKZ1sYTjQHsgk/MWRA92VbV0Ot+0J0HllbbwRTeuDjmDJK41i4hoeugjeKk=,iv:K8H6XKtHtnSNk0hj85aq/smcOsUtHdju7wxccWOoaTc=,tag:4Xh1U7JHNNCFM2EWJbthAA==,type:comment]
-#ENC[AES256_GCM,data:XaFR9rinCDsj/uMe4q6NGZIyyp5JJjyPWBOjUGmPyO37LjaqoR2tfGbL2T3uER8YqzkYOhuT,iv:TT0BKIfEwcOQ+q0Vf3s8VtPOm0FJVKncAT3B6US4R9c=,tag:Pj2c5T5eJwkPZVA31KPvVg==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:jVAsxJSRlSwdAVhE,iv:DDN7T4bh8XqRCOjSp+w7Gsc+M92jIWDca+Ip/YnB5cU=,tag:z8m5VttaPErAwpLmsIEOjw==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:EKe4QPcBH/svOR0iSACXvA4=,iv:2jHiZAiDXsdDn+VGg71qMFO3eKkWDBzmbLzUt+t6y5k=,tag:1dHHqLHDH/H1BiRhHf8i0A==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:MCbtkG+rXbLKB0QRlETfyxL7d3oAKYCjKyteOjvHMcY=,iv:dbbC672X7er0dvGYuq2SDjW0OcnuxhMpa1Xo/295S/o=,tag:5Bqjg0hjlrndoptGe88Tfw==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:zF+Q7z1KzVy9gWHTJmSJNEf01PPIzsB99UC4e9I9Uziy++Sor1d5vg==,iv:Y6005vqw6tIFXGEf/5ruBo3bK5J1mmoVfqCsNl2tOLs=,tag:UYhvS00NoMhgdx360n11DA==,type:str]
-#ENC[AES256_GCM,data:GLrTDYsqX1QpRhGJzXQlO2vQzku2DrWG55b9yAReyyxzc8Fjx1eeWcWw9GsrO4a8kjuJmS2557lA2VbB5kaIYg==,iv:qVZDe9XFkIO4WNh5faVIO4v3kzH1O3PY7VVKRLziO+w=,tag:BYEP+7rWy70kKbJUF/IxUA==,type:comment]
-#ENC[AES256_GCM,data:Vh9s02BkLEbCeFYMtipGvndF0eE40U3jLrUwm1xDMke/V5JWfv1R2moKJm5Os2Xyubp+gtGlgGg=,iv:Gt/I32eJPWQ+BJgxNkbsYhZrQwDJE1O7P3EjKjRCeqw=,tag:FfHiDPZPdadYV/HjbyJrrA==,type:comment]
-#ENC[AES256_GCM,data:frSlz5Qb4uabtddYZ6poVmj03btrwLOJGA==,iv:QJsJtptdszHEoqd/+PjMC8Uw4dOYIQUwxnpHTbs9pF0=,tag:L6mLqoL0CXPdiZfuiCwnXg==,type:comment]
-#ENC[AES256_GCM,data:ttV3OD4rn5/XNs7SYp1rGub1GKlB+Qj9Qt6dnmM3gyBya8+XnBV4NJICIARYkRTevPgc9LWHc8tV/Gg410SGKZWohh04/1NIJ/b1tiM=,iv:wdey41fNOqzAjV8lY8NB21htqwj4NUQcysq7CczCXPk=,tag:HaZ3yfurrUQs+JuGmNbgAw==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:ZlgVMDDUxJdqolaTBBw1vdAjBmpe8OHgjm5q6VUrV7TEWVWv8X21w7DhWNATNF7I,iv:kQI8sNGliuZqOZ478oWSy2YC5ZKIQGfODt8uzASXkfA=,tag:07Ehr61/2oXlSHHEs730Pw==,type:str]
-#ENC[AES256_GCM,data:eQN78I+12xKKpaK6IW4vGdHrdNnssWlfxbOmA30FcYKnmSSSAfZvjZPEsik5Pw8GUA1VtttFdj19JkT54pfyUIn7kGAergg=,iv:QDhVj8bS/z6+4O81Hk8yLzpTL6GA0HzqmxNUcH3W7vw=,tag:WF5v0xw/uQYDJbVGMVJR2Q==,type:comment]
-#ENC[AES256_GCM,data:EMEFtOlF3UGwREl3sMwwROKyQX82SmiXIbm6PfDCAw9QFJEF/yNNAnGsMH5Fvc1EqD9aO4KO,iv:mobk+T9kLfQSoKzjGYF/Ahnglf/jfD06lkhFdgDUxX4=,tag:J/eALs3XwKPeOTCkuNMTgA==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:yYXH2rJo5A==,iv:sjRD1ttukU3SWJq7wXlDvegFutJAzwQLvWz+aMNOytA=,tag:x4dfiK/WT5ueR5taGG4Xwg==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:Q10dhlB60tZblHpilrI4jAefKF8=,iv:/Dm9F2wD/ypsX8X6hHMo9LRCaP4mCf91xHJVHNOnsgc=,tag:Ou7o9HZew2gXuGei04KOYQ==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:OGK6oiWxmLI6FQo=,iv:z1I4AnRDGyTMBUgCOOYW+lZw0nj0+1qnk5s4iXwGyWA=,tag:1uzE+A+YkBuHJ9vIzEnmFQ==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:lQFyRhoY0rW1tvfP/au8,iv:0H8U1iS32vURy/R+UqvJpKZh9lbVRm0/Ub8Q5ep4Cx8=,tag:iNx9YlugOeQ1DAVNgn8ZsA==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:oUay78xL1izL+4plEANOpHTIfUqfiZgATw==,iv:LL8IU+YH8nJSUUMozJSQ98To9ftQMXmO5kOA34R8EL4=,tag:ySP8qb2+eAG2VQdKzlXSZg==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:AcDYHaggK9yXd+YfueY9i7fMukJeQixI0/35qsd3sQ==,iv:rbQCDrvoUteG0aoggG53VyrjLgoYa2CpSRcgiKPWgC0=,tag:N687t4RJh++/QqWwHWQeLA==,type:str]
-#ENC[AES256_GCM,data:k6kNwsytFVVJsEQqhIKYuUWh+CI5s3FcA3CRWL32/Lm0d0deQl0=,iv:FkRVizTmx+usdImnxKC3K7DpOr4Cf7GjHgepVam8oMc=,tag:RqNlLJiAOW2qQR2jxxE94A==,type:comment]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:g8ffQkZYjqJcSArheP5A4S4RNhQ=,iv:1ot0Q17vEcT6V28yuqyJjZkf30r4TmWvUtmW12d6yiI=,tag:01KVJNr3M+onQ0zDTeWzJg==,type:str]
-#ENC[AES256_GCM,data:14UM+dQG13vcVoj2UEY=,iv:I0bqwyIgCeiCiziFXUxErFCrdAa0923AkbxqJ+JoeSU=,tag:jKxtGgYsQjZ+2J2a1IkQYQ==,type:comment]
-PODNET: ENC[AES256_GCM,data:1AJO/stEuNOlamofyg==,iv:LuG2mwZEuq3py4k2+Ag8CSllIMNE55afHyeilPZA1zc=,tag:sX+p6HRkd1adgNatD8tp5A==,type:str]
-SVCNET: ENC[AES256_GCM,data:v44K9qnd9WYBceFu+A==,iv:9Jk6VH0wCaVYNLVWFh7If8TI+dt5HuIFtdUgGE8HOHk=,tag:cKDVdVuBtmClx9lJMwQqMA==,type:str]
+#ENC[AES256_GCM,data:I5KV33nL/LLEtWNd/xM4wOH3JD0lGr1ClCKr3ymrK/GC/mRDuQv+MWlKz7f97BO61bOorAvH+xQnYmLVmj8vSMM=,iv:T99bsDmvFKJzCGecwzgJOUfcybRUdmaF+V7rK1fEKfI=,tag:YGv42OjkakEr3kzlZVYeAA==,type:comment]
+#ENC[AES256_GCM,data:vQDnj7ljtSqMLHh2J9QXILnvtQv+HgWJtyyLpyP+Koin6swmh9krdR5UYwg=,iv:NPwAWmyYJRwzijbTyhTiZj5GvAx56OOWMY5ILECcqCI=,tag:5DrC5qKNxndsUMYv6Uli2g==,type:comment]
+VIP: ENC[AES256_GCM,data:Uc99yeu9Au/Ipnw1ug==,iv:ElLjTYG/Di5Rn6DIhE1xUBtpq32C8sq6+ZJHxTh0M1g=,tag:2lDR2sSKbQXc5UMlZOlOcA==,type:str]
+#ENC[AES256_GCM,data:MaXR6ij864+LHpTH3HQh5F9Uh1Pw2xTPqKVW,iv:b8cJcEth5W5RoxobTrqQHuz8t98Z7rgem9WKFeaB/4U=,tag:LFxIhMC4sTGdtZF8BKu1uA==,type:comment]
+#ENC[AES256_GCM,data:5We9yDPLep7U/gJ12xYVYCC4E065tSB2Jc8oDYxz7Ag9TK5pbIT+PnPElu1tyY9PvBwjCiTLl1d4NReQC+g5t3hVMHyBpHuzalRifW2qzLEXqmykUEd4Xms=,iv:IXOjfl0mfND48flbeKLa6yPfoFpBK0xQzn2wNzeM0LE=,tag:azTizbmlyg3Y7NVH/eCCYA==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:LUVLZAF+YlNhE8+UJJk=,iv:p8foayDN0WZ252nXYEZl0XsHUv6S3nQVsBrZeWiwSjs=,tag:VJ7xKT5wBV8TqPt3MUF3wA==,type:str]
+#ENC[AES256_GCM,data:cB9+G/gkZ/JuMoCGDv6Faxx6NX4NZJRC+DskzkfR2SgzKw==,iv:18qWqTH0U/jyylEsjvY4/ivelZjLctsDoFoInS/Ifg4=,tag:eTNWfOqcfMHBG8rg3L5EXw==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:XpLxOjisTJun+VHbUQ==,iv:rFvUr0vbNdXyeXu0SaIAcO8VZyjlTwgCMOwCTbvDA3o=,tag:+cLs53Hyrvl5XUach61ibQ==,type:str]
+#ENC[AES256_GCM,data:AZ7wQpSbRV1B5lraDqNN/cVVtE1cISR/fScbrhSlH+4lA8dQ9XN6uMRHNAnIQco=,iv:zomA031mMk0MUGUJId+YhVe9WxTxYhoJNxyOkzJCHVg=,tag:9A/resAdbgYRQe6RpM9oLg==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:nAU6xKVa/ogUa2wFnfYXY/sEDXAwouwKc9rrM3pNRA==,iv:TFw8lQ8fokwAmL8/33ZECM+NBwiMZjj/51qT19aik4s=,tag:16jFnO42F22B0flqC5QS/A==,type:str]
+#ENC[AES256_GCM,data:Ssku2uOASbOeBdnWuQiuqO8lokCJQzRq7uOeGl2ILWMKWcJOrAVE/WfsWXr90c6cZIA76kXLDbYovfO6PndR9+d32qU55dPciVW8jYcREY0fyA==,iv:0/PBY52P6gFr5NL6W6r0I/HQLdmhL9lIrooSkKkKMoY=,tag:YXF138y2vueVog2sga6nHg==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:eds8rK0t2owHzRCR+aYK,iv:Pxnzi6R/zWANJG6KruKyi+nryDBBBRudeIIadocdc1o=,tag:pe5rp1Og6vWiKMpMdkXc+w==,type:str]
+#ENC[AES256_GCM,data:FaMwpwt3uy92pjbtn5WrT4ZB0Tkxq7SPDCHmwvq3IWyq,iv:tUXjzNHH6iQTRvtECbbLKLUiBIS0KxqDa7LiA+/mETQ=,tag:teltwO39XrqMEnJAm4X1Iw==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:avk14CSt+FIr8Tk2MfYr,iv:aGyAdP+D4MIdKR/xFX9k4TGp4SE1Egozr5JLZD06kk4=,tag:FvYVJaF2wk8+5PQsBnz12Q==,type:str]
+#ENC[AES256_GCM,data:cg03Lx3tqiLyO1h6S4BJrnKByvGd/aubUsJb24NJ6L9U36J8FfUZ8lOO8ayIjij04w7ao7K2QFklzDpBTXEawJSuw+Yz7toJl6kCJOJ/9sk=,iv:jDamBJZN87SfYO92Tt75782zZmp3ul/mQzbYDwn/rAg=,tag:i/HkJfDQI2q6quLBa1d9Ww==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:/XhDYIo0WwqQwFcjxmTS,iv:bIY0h9PhAoHeg1bD1NRXdVJeRXJdc+/+wBxy781dDlk=,tag:/3YWP5QJEAmY03xDpUaxTg==,type:str]
+#ENC[AES256_GCM,data:pSrn8gX/eEBc8xC5hzpgmTTZbEzBjmZvtwsYE9fvfopq/plqrPkgdVQqwl1cTiPACmveu04zdVPB2wTrS0nvmEYtgp2ni+a14b7Ymiz1Ju7G0q2/9+hd,iv:naGU8NTV5C9G1EosDiF556acdxNL+KbLmGVxRkTePbc=,tag:3YVSfTTLeMyfVM8kagBagQ==,type:comment]
+#ENC[AES256_GCM,data:RWi4hfUUe3vgA73YEhWL4DUXF6gIVMVrL9Ucxj8gc0nFdeU1KGRNTY9jNfZinVNEBS/HAnA+0Ret/H7Timhi9PeCgTxev2N+00ob85m6hvNvbm1SR1ew1BraKgg9OhCKOBfUidOct40ibQgt0CPUADId/yQqkaDi9NF6ng==,iv:fqwkU1GjGcdpsu6z1AbgU08BL6gg8jXNLHCFINOI0Go=,tag:WkW3FNuzqTviSp+lqSMtug==,type:comment]
+#ENC[AES256_GCM,data:65/Tlyqn4xf7Q92ajNuZHyes77M+NkIUfggBEs3t6UtGnJJs1KvTkrVh2rWjkvr0pD1JRUXRLH4ZRl3S7uRIANM5Ap9oVF0VLia2P4wOjUM=,iv:LvjDb2csUkZ8WOXnXXmyHqjXnTVZbdRdJd2R8v4FB70=,tag:PmHvb5gWhfG9ipDetZlKPA==,type:comment]
+#ENC[AES256_GCM,data:HIS5Qfsx9RoFEyl39mtYNzhzFhzRw9cEpBsxCJ1RJ3UsZm4ufahAHwC65Ckd/xPNjadBz6T1,iv:R4GdFOgKWRXVcwz4daeAs7QKSGi88M8lN9cdMNGTwHc=,tag:3oCq9FWYuzrJj/s2X1yYdw==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:eeiYKtnYSv1jXfxz,iv:6IalUdxyH0bEBbieyymLqckYHSlUvwlNCh2/sJK6HSE=,tag:Gfsfvk82hcwmTU8weKQqDA==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:u+JmmRTPSWKyqOUlayOOwu4=,iv:JkOoIwzJR1HEqciuLh7lLQZjRZ9SmrtIeYsZ5E+Gbds=,tag:odTrUkiYp8GsRwoMdYT8iQ==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:TuInrtDZLQx7TxGCR3eNlxdToXQ6BD9nwZEGSb22owU=,iv:eAd8xOvAd0THDHBmrNUvgeTLAAjrCMxRExixBEnjY50=,tag:KV1eng5A1OOmpQN7XoGIEA==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:6PIRPhzXwEs3lEF5Kh7JGN6IUmShVfMsPq0Jgt4D+nzxUJKiVufR1g==,iv:9/pyRwiKd+qDaVUbBVRQg3MH3rEGb57XmivoCVjmSh4=,tag:m8kU90fug+gNOCKSUyvxow==,type:str]
+#ENC[AES256_GCM,data:LvdWe//zSkZG39fQxx2My56mhsKONh/FJlO00uhvbx0SWtCRv/l6vbU80Cm0fhbXHiSQyBXYxpVeRHCHNVtAhw==,iv:UXy47Of+X0s/rIq8xbCQlXyy4gC+4wd0p6ovX3qNQHk=,tag:9g7EMPTSYjIkZk4gN7mgcw==,type:comment]
+#ENC[AES256_GCM,data:GVgxyKMgOx2ytpgeKV3RgNbxcIlGEDi4kq4X9ZqAbnFIV/0tbni6YcRwAOen20UHBniNJe2Iozo=,iv:1RHCWxy2SUBQbNx+FhcRAX7dSE3yqCnHST27zCXWNik=,tag:Hj2yzTt7pFCnJBkwJkvVSA==,type:comment]
+#ENC[AES256_GCM,data:HoIy2lvzw2Q1Mpq+w1at5ur7K/5QPDmnYg==,iv:Han8jg8ma+zPtUwHyM1afcpzlSxinYo4n7EoXgBBjVU=,tag:NCS/ODHHm8itnkpYkk1XIg==,type:comment]
+#ENC[AES256_GCM,data:BZ2xy4ZZy9VEDMBw7iUJPGy61kktxiqEVJWaEBn4wp2BNNWjWCIBqL6ATijlrRZTDJuwDiV3YqJvk2UrbR+hGWfR0LFThF/lkhuIoTU=,iv:L4y6xaqXW4cmF8VNvollxCrmbxTjjloqOMmEgF1GpfQ=,tag:NP1u7msly5C3V+zgcoNg+A==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:moLHJYTBCulYn9maHBIYzNlcO6lA0hjw9odHZHKJ8OvpfoVcImtbVBuNjUjtfped,iv:6TId5AWsfnIp23CGkYBwtyXR0j/9KNfQUypWjqJHFCc=,tag:Y2KqWUY6WbQ7cTIBP4ZVCw==,type:str]
+#ENC[AES256_GCM,data:7cmWXAdd7lm6JmrJdBg/+b7ogAS/4NuofX9ldBcjI5ii3y9YPTDsc1Ojul7FUIBR0V80I9gylkFVBfQBm+Dxz3tAEIyOExY=,iv:JVIQ57hs4IeWQdncrNhS4WR8nYHoqCavAxJTWNVC//I=,tag:8EG6eUH3K1fYjbWcWfx2Bw==,type:comment]
+#ENC[AES256_GCM,data:bQRoU4PkvWTWd9K00zNIfQR19mlpPU2PxDMwi7K+K4xj7PCkC71BW3q/sVqTeAPHn1CAXZbn,iv:MQa9wx4roTUT3+qDpp7N91CWiRlV8BiJkWZszAxyeUc=,tag:awFP+7q7JR1s/YpZclprJw==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:Wy8XzDkzWQ==,iv:eTb1yyNQjVUxqngkFQxFXXxxUSl0IrUEFVQlEmA4qyk=,tag:yIHEn+OM1m7zj6FldhlEsg==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:MdkJ2BZxHjXiTeEIlapagHTvnQ0=,iv:eblykVTQnqcPNJTIexiWuUcjrUZFz76zFxAyw3oXMEI=,tag:Dme+PWkmR65EivqOBzrKkg==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:Iz6GQMAdIvohcMM=,iv:19MHSOjaogPRyJbmM0IzOvIEO99AQ3NCqeL/Id0IRT4=,tag:FKp3L/1jF57x+StMXI80Ew==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:oCmssiftFnHtqQVWmelz,iv:8qcsRmQ9ayyoWuh22EYDcajqn4leD9mKqPY8xv+vIec=,tag:rFeFsWLvRq/R/OQfSU4blQ==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:qz0OeeVVvim0DZE+Lqxk1Paie5i2Wx5nFQ==,iv:k7Ec20LFQiPRQKKGFzufDsT9ihCOVGfhvCEmtV8zmEo=,tag:nMIMvgEvicyhGuZ1SAvm2A==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:GXGk52WbfFeu9dz/WFq0flZuwikQ2StJV7YInFgF5w==,iv:6jIy9CeINC1LcdhYLYUUG5oPLtz/5LnJ/lMQ2wv8DIg=,tag:cxD6ijLYoNyfXgTzvZNgtw==,type:str]
+#ENC[AES256_GCM,data:U4Lxv0Rq8jf4j0hP5Xl3HILQOlsQSVkfG0YL5aNQ1uFSCP1+kC4=,iv:r6+oo6WLwb0/eWHrvC4K4K6j5rrWvLNmC1wIFQoIrn0=,tag:iQDV3HlblutddIQ7B5N83Q==,type:comment]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:utdG3tR/NoK2jNciWMatIUebfTU=,iv:xCr8OrgvShfljmCBZcelD+4wtKYQd8TXFQkb7SRMEKs=,tag:E5Ovt92Dny5hcnKO7dNTRQ==,type:str]
+#ENC[AES256_GCM,data:IEO+V6o2YeWt6OnLpkw=,iv:Vn3eRVG19Afnr31sBae3dPMHp51LgcQe/3+C1XDTP1w=,tag:sRlO21WOUdD4xRxAVNb8Cw==,type:comment]
+PODNET: ENC[AES256_GCM,data:Yp2HgypCldOjPyXTEQ==,iv:OUzv/E4iSJxNUUB+g0kLbBMsiRdiC+tsR9Vj4G2y194=,tag:KW6f0hyCaD2ft1eD6tezbw==,type:str]
+SVCNET: ENC[AES256_GCM,data:CbmyDxm9HmvDxdMymA==,iv:XJVWsIR+tl2EFnJHbRuXKfjcEGAiZ52YPFSS8wOkYB8=,tag:/waFUjbSVi2zDWJQN2Y5rQ==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,13 +50,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBjTWlJV0N5SkZZYys3OEdr
-            bjQwZFJoc0VTcDZjc093c1RYOFhYc1AxUEZrClZ4NFhDNlZtQ202ckRsaDVMZGRU
-            QjRqN0EyMXM3SWFlUnZ4UXdBYTlDTVkKLS0tIFh3bXpMQnUrbXN6M3R4U1diRnBr
-            VG1ZeS9xYk9keTdPRk8rd09MaDJTVjAKxlNL2OPn4uMGBLFKdDAsoywsqWjo6W9+
-            Tr+uvyC5I5K3oGCRb+OS9ujzPsfWnHScHKpPbjXDeZjPcczIcRBV5g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBqS1FhYVZFL25uYXhsRldK
+            c1VISU1DQWgwNjVPZkoyOHBBM0RoM0srRlMwCi9JVlZlWk9qZFVVQ1dEUFRjK01V
+            T1FyMHV6SDlHT29QUHJUQzBIQUF6OU0KLS0tIHhjVW9acXovUXQ0U3R0RDQrbk9X
+            R1d1LzZPM0lGMlZvVGtOeGg0S2ZPZ0UK1v9E4JmBc4/SWwRPEeudEaN/IRBxBZTh
+            5tCwYR1jwWxSlfASEyPJolanr+UkZOn/X06v8394Bd3IoN+Ja7px6A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-11T22:33:25Z"
-    mac: ENC[AES256_GCM,data:pmWzMmHrHzZP7r0zgC4Tz2MU8FnDuZkalNNVXI07c3Hg5eYpcJv9AGOy8x14ZAfETvCwF8oYrk/rpud0fr5Y4387Q2DAPMurs9HIxT85rLk5dBYhEn5E9fgL6krLvryFTfay0PTWnuzSvG/2+JesovZcnw1UBYNOZVZeMOdlb2U=,iv:KTXGF/Yg+G2fRzy+nS/Utgam2eDWYIImtxLPcJKHX5Y=,tag:KJ5AOGGXo+y5O8a/aZtNBg==,type:str]
+    lastmodified: "2025-01-12T18:27:45Z"
+    mac: ENC[AES256_GCM,data:6w2AT6Sgc2S5nQwA27En1p/lyhauyzEW55GUuyjGr9LcGBNZGqLrq0PnMeHmG85/MgAuAmP1xwZJdvmI1GeVzjN5xlE+GBlYWGRobZIvsWM2J4ATS/BlSDQNTphJVxRO8TJhGc5aCUXXjvs+fDpy5BEUUKhIb2PizrVUItK3+1U=,iv:Lik0zF486Wx/oQa6L10AwjBov+L2G3VFfYVZ/X0robU=,tag:padaTkRSzkA35TWvag+f3A==,type:str]
     pgp: []
     version: 3.9.2
